Bug 1660189 - Bail out from nsPrintJob::DoCommonPrint if the docshell was destroyed in beforeprint event handlers. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D87827